LPS-55227 - Fix fieldset overflow in firefox

--- a/portal-web/docroot/html/portlet/document_library/css/main.css
+++ b/portal-web/docroot/html/portlet/document_library/css/main.css
@@ -659,6 +659,7 @@
 		}
 
 		.common-file-metadata-container fieldset {
+			display: table-cell;
 			overflow: hidden;
 		}
 	}
